--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </p>
         <hr>
         <h3>Currently working on:</h3>
-        <li>A journal app with Philosophical Tutors to help higher-order thinking people cultive their ruling faculty.
+        <li>A philosophic journal app to help higher-order thinkers cultive their ruling faculty.
         <li>The website you're viewing now.</li>
         </li>
         <h3>Previous work:</h3>
